fix: card-container alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -78,6 +78,8 @@ main {
 #cardContainer {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 .card {
